text overflow fixed

--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -5,4 +5,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
+  padding: 1rem;
+  text-align: justify;
+  overflow-wrap: break-word;
 }
